--- a/EvaluationCrm/Views/Shared/_Layout.cshtml
+++ b/EvaluationCrm/Views/Shared/_Layout.cshtml
@@ -49,6 +49,11 @@
 								<i class="bi bi-setting"></i> Parameter
 							</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" asp-controller="File" asp-action="Upload">
+								<i class="bi bi-file-earmark-arrow-up"></i> Upload File
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
