--- a/EvaluationCrm/Views/Shared/_Layout.cshtml
+++ b/EvaluationCrm/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" asp-controller="File" asp-action="Upload">
+							<a class="nav-link" asp-controller="File" asp-action="Index">
 								<i class="bi bi-file-earmark-arrow-up"></i> Upload File
 							</a>
 						</li>
